--- a/wilde.css
+++ b/wilde.css
@@ -50,3 +50,19 @@ tr:nth-child(even) {background-color: #d1d1d1;}
     border-style:groove;
     border-color: black;
 }
+
+ul.navbar-horizontal {
+    /* remove these */
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    }
+    ul.navbar-horizontal li {
+        float:left;
+        color:#000;
+        background-color:rgb(11, 197, 230)
+        }
+    ul.navbar-horizontal a {
+    display:block;
+    padding:8px
+
